# prompt-injection-safeguard

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  valid.py
.github/workflows/: ci.yml  release_audit.yml
bench/: evaluator.py  leaderboard.py  runner.py
bench/datasets/: base.py  hf_loader.py
bench/models/: base.py  distilbert.py  registry.py  roberta.py
bench/utils/: reproducibility.py
bench/visualization/: charts.py
configs/: benchmark.yaml  dataset_registry.yaml  datasets.yaml  default.yaml  llm_run.yaml  model_registry.yaml  quick_smoke_test.yaml
core/: config_loader.py  runner.py
dashboard/templates/: leaderboard.html.jinja
data/: base_dataset.py  hf_loader.py  schema_validator.py  suites.py
docs/: adding_a_model.md  dashboard.html  methadology.md  methodology.md
evaluation/: evaluator.py  metric_registry.py  parallel_engine.py
evaluation/metrics/: accuracy.py
inference/: engine.py  prediction_types.py
leaderboard/: generator.py  ranking.py
model/: prompt-safeguard-model.py
models/: base_model.py  discovery.py  model_registry.py
models/adapters/: anthropic_guard.py  bert.py  deberta.py  distilbert.py  distilbert_finetuned.py  gemma.py  hf_classifier.py  kiwi_guard.py  laiyer_guard.py  llama.py  llm_base.py  mistral.py  openai_guard.py  phi3.py  qwen.py  roberta.py  roberta_injection.py
reproducibility/: snapshot.py
results/: run_manifest.py  writer.py
runs/example_output/: run_metadata.json
scripts/: compare_runs.py  runner.py  validate_plugin.py
visualization/: charts.py  dashboard.py
(+5 files in other folders)
